<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/media_menu_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_height="50dp"
        android:layout_width="match_parent"
        android:clickable="true"
        android:orientation="horizontal"
        android:focusable="true">
        <ImageView
            android:layout_height="25dp"
            android:layout_width="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_open" />
        <TextView
             android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="50dp"
            android:text="@string/open"/>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_moveout" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/moveout"/>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_del" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/delete"/>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_rename" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/rename"/>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_share" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/share"/>
    </LinearLayout>
</LinearLayout>